fix overlapping text on card pages

--- a/static/src/css/app.scss
+++ b/static/src/css/app.scss
@@ -33,7 +33,6 @@ body {
   margin-top: 20px;
 
   .card-page-info {
-    width: 100%;
     max-width: 380px;
     padding: 10px;
     margin-left: 20px;
